load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_binary(
    name = "cli",
    srcs = ["main.go"],
    importpath = "github.com/jrebe/code/example/go/cli",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_urfave_cli//:go_default_library",
    ],
)
