load("@py_deps//:requirements.bzl", "requirement")

py_library(
    name = "cached_session",
    srcs = ["cached_session.py"],
    visibility = ["//visibility:public"],
    deps = [
        "@py_deps//pypi__cachecontrol",
        "@py_deps//pypi__lockfile",
        "@py_deps//pypi__requests",
    ],
)

py_test(
    name = "cached_session_test",
    srcs = ["cached_session_test.py"],
    deps = [":cached_session"],
)
